# findpydeps

./: .gitignore  README.md  find-dependencies.py  find-py-dependencies.py  install.sh  pyproject.toml  setup.cfg  update-db.sh  update-pypi-list.sh
src/find_py_dependencies_ilu_vatar_0.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/findpydeps/: __init__.py  __main__.py  findpydeps.py
src/findpydeps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: functional.py
tests/functional/: help-message
