[metadata]
name = findpydeps
version = 0.2.3

author = Nicolas Reyland
author_email = nicolas@reyland.dev
maintainer = Nicolas Reyland
maintainer_email = nicolas@reyland.dev

description = Find the python dependencies used by your python files and projects
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE

url = https://github.com/Nicolas-Reyland/findpydeps
project_urls =
	Bug Tracker = https://github.com/Nicolas-Reyland/findpydeps/issues

classifiers =
	Development Status :: 4 - Beta
	Programming Language :: Python :: 3
	Environment :: Console
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Intended Audience :: Developers
	Topic :: Software Development :: Libraries :: Python Modules
	Natural Language :: English

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.0

[options.entry_points]
console_scripts =
	findpydeps = findpydeps.__main__:main

[options.packages.find]
where = src
